<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:rowCount="3" android:columnCount="5"
    android:padding="4dp">

    <TextView
        android:id="@+id/dersAdi"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="4"
        android:layout_columnWeight="1"
        android:text="Ders Adi"
        android:textStyle="bold"
        android:textSize="20sp" />

    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/vizeNotu"
        android:textStyle="bold"
        android:paddingBottom="3dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/finalNotu"
        android:textStyle="bold"
        android:paddingBottom="3dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>

    <TextView
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/butNotu"
        android:paddingBottom="3dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_row="1"
        android:layout_column="3"
        android:text="@string/ortNot"
        android:paddingBottom="3dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/harfNotu"
        android:layout_row="0"
        android:layout_column="4"
        android:layout_rowSpan="2"
        android:text="AA - Cok Iyi"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:textStyle="bold"
        android:background="@color/cokBasari"/>

    <TextView
        android:id="@+id/vizeNotu"
        android:layout_row="2"
        android:layout_column="0"
        android:text="-"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/finalNotu"
        android:layout_row="2"
        android:layout_column="1"
        android:text="-"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/butNotu"
        android:layout_row="2"
        android:layout_column="2"
        android:text="-"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/sinOrt"
        android:layout_row="2"
        android:layout_column="3"
        android:text="-"
        android:layout_gravity="center" />

</GridLayout>
